--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,23 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	mavenLocal()
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://raw.githubusercontent.com/TerraformersMC/Archive/main/releases/" }
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:1.17"
-    mappings "net.fabricmc:yarn:1.17+build.13:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.11.6"
-            
-    //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.36.0+1.17"
+	minecraft "com.mojang:minecraft:1.17.1"
+	mappings "net.fabricmc:yarn:1.17.1+build.14:v2"
+	modImplementation "net.fabricmc:fabric-loader:0.11.6"
+
+	// Fabric api
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.37.0+1.17"
+
+	// Config stuff
+	modApi("me.shedaniel.cloth:cloth-config-fabric:5.0.34") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	modImplementation "com.terraformersmc:modmenu:2.0.2"
 }
 
 processResources {
