--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,14 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs  = -Xmx1G
 
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.14
-	loader_version=0.11.6
-	fabric_version=0.37.0+1.17
+# Fabric properties
+minecraft_version   = 1.18.1
+yarn_mappings       = 1.18.1+build.5
+loader_version      = 0.12.12
 
-# Mod Properties
-	mod_version = 0.3.1
-	maven_group = zaorlando
-	archives_base_name = crosshairmod
+# Mod properties
+mod_version         = 0.4.0
+maven_group         = zaorlando.crosshairmod
+archives_base_name  = crosshairmod
+
+# Dependencies
+fabric_api_version  = 0.44.0+1.18
