--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,8 @@
-org.gradle.jvmargs  = -Xmx1G
+# Gradle Properties
+org.gradle.jvmargs = -Xmx1G
+org.gradle.parallel = true
 
-# Fabric properties
-minecraft_version   = 1.19.4
-yarn_mappings       = 1.19.4+build.2
-loader_version      = 0.14.19
-
-# Mod properties
-mod_version         = 0.5.1
-maven_group         = zaorlando.crosshairmod
-archives_base_name  = crosshairmod
-
-# Dependencies
-fabric_api_version  = 0.79.0+1.19.4
+# Mod Properties
+version = 0.6.0
+maven_group = kiorlando.situational_crosshair
+archives_base_name = situational_crosshair
